# Credit-Card-Fraud-Detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_all.sh  run_eval.sh  run_train.sh
src/mlproject/: __init__.py  cli.py  config.py  data.py  evaluate.py  features.py  model.py  train.py  utils.py  visualize.py
tests/: test_data.py  test_features.py  test_model.py  test_train_eval.py
